[package]
name = "osl"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plex = {git = "https://github.com/goffrie/plex"}
spirv = "0.2"
rspirv = "0.11"
inkwell = {git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"]}
anyhow = "1.0.42"
thiserror = "1.0.26"
codespan-reporting = "0.11.1"
clap = { version = "3.2.22", features = ["derive"] }
